--- a/QInput.asmdef
+++ b/QInput.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "QuickInput",
+    "name": "QInput",
     "rootNamespace": "Acfeel",
     "references": [
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
