--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.acfeel.soundsystemcom.acfeel.quickinput",
-  "displayName": "QuickInput",
+  "name": "com.acfeel.soundsystemcom.acfeel.QInput",
+  "displayName": "QInput",
   "version": "1.0.0",
   "unity": "2021.3",
   "description": "",
