--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.acfeel.QInput",
+  "name": "com.acfeel.qinput",
   "displayName": "QInput",
   "version": "1.0.0",
   "unity": "2021.3",
